<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="io.github.sogoesagain.encountermonitor.MainActivity"
        android:orientation="vertical">

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_discoverable"
            android:onClick="onClickDiscover"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_device_name"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bluetoothName"
                android:text=""/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userName"
                android:text=""/>
    </LinearLayout>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:text="@string/register"
            android:onClick="onClickRegister"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startButton"
            android:text="@string/start"
            android:onClick="onClickStart"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stopButton"
            android:text="@string/stop"
            android:onClick="onClickStop"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewButton"
            android:text="@string/view"
            android:onClick="onClickView"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clearButton"
            android:text="@string/clear"
            android:background="@color/colorAccent"
            android:onClick="onClickClear"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/logTextView"
                android:background="@android:drawable/edit_text"/>
    </ScrollView>
</LinearLayout>
